--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,13 @@
 
 
     <string name="nav_item_home">Home</string>
+    <string name="nav_truck_list">Trucks</string>
+    <string name="nav_add_new_truck">New Truck</string>
     <string name="nav_item_truck">Trucks</string>
     <string name="nav_item_to_load">Load Items</string>
     <string name="nav_item_loaded">Loaded Items</string>
     <string name="nav_item_to_unload">Unload Items</string>
+    <string name="nav_booking_id">Booking ID</string>
     <string-array name="nav_drawer_labels">
         <item>@string/nav_item_home</item>
         <item>@string/nav_item_truck</item>
