--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
 
     <string name="nav_item_home">Home</string>
     <string name="nav_truck_list">Trucks</string>
+    <string name="nav_issue_list">Issues</string>
     <string name="nav_truck_details">Truck Details</string>
     <string name="nav_add_new_truck">New Truck</string>
     <string name="nav_item_truck">Trucks</string>
